  * When the layout has three groups swithch them in the following order:
    group1 -> group2 -> group1 -> group3.  Document this problem in the
    FAQ.  Thanks to Goran Vulić, closes: #560814.
  * Do not remove /etc/console-setup in the postrm script if one of
    console-setup or console-setup-mini is still installed.  Thanks to
    Francesco Poli, closes: #561005.

 -- Anton Zinoviev <zinoviev@debian.org>  Tue, 01 Dec 2009 20:31:03 +0200

console-setup (1.50) unstable; urgency=low

  * When deciding about whether cached.kmap.gz is actual test against
    /etc/default/keyboard rather than agains /etc/default/console-setup.
    Thanks to Kurt Roeckx and Renato S. Yamane, closes: #558448, #558475.
  * Do not use files in /usr/share/doc as templates.  Thanks to Trent
    W. Buck, closes: #558229.
  * Update the FAQ.  Thanks to Luís Picciochi Oliveira, closes: #548837.
  * bdf2psf: do not discard gliphs with zero rows in the bitmap matrix.
    Thanks to Tim Allen, closes: #539108.
  * Fix a bug causing the 'unsupported_layout' question to be asked on
    every other installation.
  * Changes in the template file in order to close some bugs:
    - The AltGr question.  Also add a new option 'Do not use AltGr key'.
      Rename 'Right Alt' => 'Right Alt (AltGr)'.  Thanks to Kurt Roeckx,
      closes: #524235.
    - Do not use 'configuration program' and 'unsupported'.  Thanks to GSR
      and Yann Dirson, closes: #535965, #538397.
    - Add long descriptions to keyboard-configuration/model and
      keyboard-configuration/layout.  Thanks to Paul Vojta, closes: #531646.

 -- Anton Zinoviev <zinoviev@debian.org>  Mon, 30 Nov 2009 21:04:24 +0200

console-setup (1.49) unstable; urgency=low

  * Extend Fonts/standard.equivalents in order to support the symbols
    required by toilet-fonts.  Thanks to Francesco Poli.
  * New version of the Terminus font in the source package.

 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 20 Nov 2009 13:05:43 +0200
