@@ -3254,7 +3254,7 @@ sub flatten {
     @quality = ();
     my @real_group_table = ([-1, -1, -1, -1],
 			    [0, 0, 0, 0], # gr1 -> gr1 -> gr1 -> gr1
-			    [0, 1, 0, 1], # gr1 -> gr2 -> gr1 -> gr2
+			    [0, 1, 1, 0], # gr1 -> gr2 -> gr1 -> gr2
 			    [0, 1, 2, 0], # gr1 -> gr2 -> gr1 -> gr3
 			    [0, 1, 3, 2]);# gr1 -> gr2 -> gr3 -> gr4
     for my $group (0..3) {
