@@ -113,11 +113,11 @@ install-mini: build
 		usr/share/consolefonts
 	dh_install -pconsole-setup-mini Fonts/Vietnamese-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Keyboard/ckbcomp-mini usr/bin
-	dh_link -pconsole-setup-mini usr/bin/ckbcomp-mini usr/bin/ckbcomp
+	dh_install -pconsole-setup-mini Keyboard/ckbcomp-mini bin
+	dh_link -pconsole-setup-mini bin/ckbcomp-mini usr/bin/ckbcomp
 	dh_install -pconsole-setup-mini setupcon bin
 	$(pre) --mini debian/console-setup-mini/bin/setupcon
-	$(pre) --mini debian/console-setup-mini/usr/bin/ckbcomp-mini
+	$(pre) --mini debian/console-setup-mini/bin/ckbcomp-mini
 	rm -rf `find debian/console-setup-mini -name .cvsignore`
 	rm -rf `find debian/console-setup-mini -name .svn`
 
@@ -211,8 +211,8 @@ install-udeb: build
 	rm -rf `find debian/console-setup-fonts-udeb -name .cvsignore`
 	rm -rf `find debian/console-setup-fonts-udeb -name .svn`
 # console-setup-udeb
-	dh_install -pconsole-setup-udeb Keyboard/ckbcomp-mini usr/bin
-	dh_link -pconsole-setup-udeb usr/bin/ckbcomp-mini usr/bin/ckbcomp
+	dh_install -pconsole-setup-udeb Keyboard/ckbcomp-mini bin
+	dh_link -pconsole-setup-udeb bin/ckbcomp-mini usr/bin/ckbcomp
 	dh_install -pconsole-setup-udeb setupcon bin
 	dh_installdirs -p console-setup-udeb usr/share/console-setup-mini
 	install -m0755  debian/keyboard-configuration.config \
@@ -231,7 +231,7 @@ install-udeb: build
 	$(pre) --mini debian/console-setup-udeb/usr/lib/base-installer.d/20console-setup
 	$(pre) --mini debian/console-setup-udeb/usr/share/console-setup-mini/keyboard-configuration.config
 	$(pre) --mini debian/console-setup-udeb/bin/setupcon
-	$(pre) --mini debian/console-setup-udeb/usr/bin/ckbcomp-mini
+	$(pre) --mini debian/console-setup-udeb/bin/ckbcomp-mini
 	rm -rf `find debian/console-setup-udeb -name .cvsignore`
 	rm -rf `find debian/console-setup-udeb -name .svn`
 
