@@ -22,6 +22,11 @@ console-setup (1.51) UNRELEASED; urgency=low
   * Do not remove /etc/console-setup in the postrm script if one of
     console-setup or console-setup-mini is still installed.  Thanks to
     Francesco Poli, closes: #561005.
+  * setupcon: do not test for the existence of ckbcomp.  Thanks to Eric
+    Valette, closes: #562557.
+  * Install ckbcomp-mini in /bin.  Otherwise before /usr is mounted it
+    would be impossible to test whether console-setup is installed or
+    console-setup-mini.
 
  -- Anton Zinoviev <zinoviev@debian.org>  Tue, 01 Dec 2009 20:31:03 +0200
 
